Squashed commit of the following:
commit 73e452edc02f6100ab42d9e08c66ccd1fa3f698f
Author: Pete Richards <peter.l.richards@nasa.gov>
Date:   Wed Jun 21 14:56:51 2017 -0700

    [Imagery] Update spec

commit bbeb97e93c57ab1b24af666f1b07bceebe7db01e
Author: Pete Richards <peter.l.richards@nasa.gov>
Date:   Wed Jun 21 14:21:51 2017 -0700

    [Imagery] Use LAD query

commit e6d65f3549766e8d1cc5195fc02c3ecaebbca36e
Author: Pete Richards <peter.l.richards@nasa.gov>
Date:   Wed Jun 21 14:17:18 2017 -0700

    [Example] Add historic, lad imagery providers

commit 1ab4cf68d7be3d8c9c41ddee0f4cc7f924552ade
Author: Pete Richards <peter.l.richards@nasa.gov>
Date:   Wed Jun 21 13:56:18 2017 -0700

    [example] 5 seconds per image

commit 7fcaf6510eeeae56b5dc2f7996ddf61036ab96ac
Merge: 0713941 44246e6
Author: Pete Richards <pete@pete-richards.com>
Date:   Wed Jun 21 11:24:23 2017 -0700

    Merge pull request #1614 from nasa/open1569

    Fixed tabbing in overlay forms

commit 07139418126a77620785f342adf3badf27df06dc
Author: Victor Woeltjen <victor.woeltjen@nasa.gov>
Date:   Wed Jun 21 13:23:18 2017 -0500

    [Time] Encode time settings in URL (#1620)

    * [Time Conductor] Skeleton class for URL handling

    #1550

    * [Time Conductor] Scaffold in param handling

    * [Time Conductor] Finish sketching in URL handler

    * [Time Conductor] Usage correct constants for bounds

    * [Time Conductor] Use start/end for bounds/deltas

    * [Time] Move URL handler

    Per discussion, https://github.com/nasa/openmct/issues/1550#issuecomment-308849449

    * [Time] Rename URL handler

    * [Time] Rename URL handler script

    * [Time] Use Time API from URL handler

    * [Time] Utilize Time API

    * [Time] Listen for changes, synchronize URL

    * [Time] Move URL handler into adapter

    ...as it uses Angular constructs.

    * [Time] Wire URL handler into adapter bundle

    * [Time] Pass correct constructor arguments to URL handler

    * [Time] Begin debugging URL handl

--- a/platform/commonUI/general/res/sass/user-environ/_layout.scss
+++ b/platform/commonUI/general/res/sass/user-environ/_layout.scss
@@ -227,8 +227,13 @@ body.desktop .pane .mini-tab-icon.toggle-pane {
     top: $ueTopBarH + $interiorMarginLg;
 }
 
-.l-object-wrapper-inner {
-    @include trans-prop-nice-resize(0.25s);
+.l-object-wrapper {
+    padding: 0;
+    @include trans-prop-nice((padding), 0.25s);
+    .l-edit-controls {
+        @include trans-prop-nice((height), 0.5s);
+        height: 0;
+    }
 }
 
 .object-browse-bar .s-button,
@@ -345,46 +350,14 @@ body.desktop {
 
 .s-status-editing {
     .l-object-wrapper {
-        $t2Dur: $browseToEditAnimMs;
-        $t1Dur: $t2Dur / 2;
-        $pulseDur: $editBorderPulseMs;
-        $bC0: rgba($colorEditAreaFg, 0.5);
-        $bC100: rgba($colorEditAreaFg, 1);
-
         background-color: $colorEditAreaBg;
         border-radius: $controlCr;
-        border: 1px dotted $bC0;
-
-        // Transition 1
-        @include keyframes(wrapperIn) {
-            from { border: 0px dotted transparent; padding: 0; }
-            to { border: 1px dotted $bC0; padding: 5px; }
-        }
-
-        // Do last
-        @include keyframes(pulseNew) {
-            from  { border-color: $bC0; }
-            to { border-color: $bC100; }
-        }
-
-        @include animation-name(wrapperIn, pulseNew);
-        @include animation-duration($t1Dur, $pulseDur);
-        @include animation-delay(0s, $t1Dur + $t2Dur);
-        @include animation-direction(normal, alternate);
-        @include animation-fill-mode(both, none);
-        @include animation-iteration-count(1, infinite);
-        @include animation-timing-function(ease-in-out, linear);
-
+        border: 1px dotted $colorEditAreaFg;
+        padding: $interiorMargin;
 
         .l-edit-controls {
-            height: 0;
+            height: $ueEditToolBarH + $interiorMargin; margin-bottom: $interiorMargin;
             border-bottom: 1px solid $colorInteriorBorder;
-            // Transition 2: reveal edit controls
-            @include keyframes(editIn) {
-                from { border-bottom: 0px solid transparent; height: 0; margin-bottom: 0; }
-                to { border-bottom: 1px solid $colorInteriorBorder; height: $ueEditToolBarH + $interiorMargin; margin-bottom: $interiorMargin; }
-            }
-            @include animToParams(editIn, $dur: $t2Dur, $delay: $t1Dur);
             .tool-bar {
                 right: $interiorMargin;
             }
