--- a/platform/search/res/templates/search.html
+++ b/platform/search/res/templates/search.html
@@ -19,14 +19,14 @@
  this source code distribution or the Licensing information page available
  at runtime from the About dialog for additional information.
 -->
-<div class="angular-w" ng-controller="SearchController as controller">
+<div class="angular-w l-flex-col flex-elem grows holder" ng-controller="SearchController as controller">
     <div class="l-flex-col flex-elem grows holder holder-search" ng-controller="SearchMenuController as menuController">
         <div class="search-bar flex-elem l-flex-row"
              ng-controller="ToggleController as toggle"
              ng-class="{ holder: !(ngModel.input === '' || ngModel.input === undefined) }">
             <div class="holder flex-elem grows">
                 <input class="search-input"
-                       type="text"
+                       type="text" tabindex="10000"
                        ng-model="ngModel.input"
                        ng-keyup="controller.search()"/>
                 <a class="clear-icon clear-input icon-x-in-circle"
